--- a/index.2.html
+++ b/index.2.html
@@ -190,20 +190,8 @@
     <div class="skeleton skeleton-card"></div>
   </main>  <!-- Scripts -->  <script>
     const animeData = {
-      "wind-breaker season 1 ": { title: "WIND BREAKER Season 1 in Hindi", cover: "InShot_20250427_105208488.jpg", link: "anime/windbreakerseason1.html" },
-      "dragon-ball": { title: "Dragon Ball Prison Planet Full Movie", cover: "unnamed (4).jpg", link: "anime/dragon-ball.html" },
-      "The_Curious_Case_of_Benjamin_Button_2008_Hindi": { title: "The_Curious_Case_of_Benjamin_Button_2008_Hindi", cover: "download (1).jpg", link: "anime/The_Curious_Case_of_Benjamin_Button_2008_Hindi.html" },
-      "shinchan-ninja": { title: "Shinchan The Legend of Ninja Mononoke (Hindi)", cover: "unnamed (1).jpg", link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html" },
-      "wind-breaker": { title: "WIND BREAKER Season 2 in Hindi", cover: "WIND BREAKER S2.jpg", link: "anime/WIND BREAKER S2.html" },
-      "Justice_League_2017_Hindi_Dubbed": { title: "Justice_League_2017_Hindi_Dubbed", cover: "photos/images (1).jpg", link: "anime/Justice_League_2017_Hindi_Dubbed_Full_Movie.html" },
-      "Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed": { title: "Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed", cover: "photos/p15366809_v_h10_aw.jpg", link: "anime/Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed.html" },
-      "tokyo-revengers": { title: "Tokyo Revengers Season 1", cover: "unnamed (2).jpg", link: "anime/Tokyo Revengers season 1.html" },
-      "Kesari_Chapter_2_The_Untold_Story_Of_Jallianwala": { title: "Kesari_Chapter_2_The_Untold_Story_Of_Jallianwala", cover: "photos/download (4).jpg", link: "anime/Kesari_Chapter_2_The_Untold_Story_Of_Jallianwala.html" },
-      "The_Dark_Knight": { title: "The_Dark_Knight", cover: "photos/74906de0-d644-4b0d-bf22-e2a321583a93.avif", link: "anime/The_Dark_Knight.html" },
-      "Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie": { title: "Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie", cover: "photos/eternals-6qggyrv4n3sv5r3n.jpg", link: "anime/Eternals_2021_Dual_Audio_Hindi_Dubbed_Full_Movie.html" },
-      "Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie": { title: "Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie", cover: "download (3).jpg", link: "anime/Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie.html" },
-      "the shawshank redemption full movie in hindi ": { title: "the shawshank redemption full movie in hindi", cover: "download.jpg", link: "anime/the shawshank redemption full movie in hindi.html" },
-      "chainsaw man all episodes in one video+ movie": { title: "chainsaw man all episodes in one video+ movie", cover: "images (7).jpeg", link: "anime/chainsaw man.html" }
+      "wind-breaker season 1 ": { title: "WIND BREAKER Season 1 in Hindi", cover: "InShot_20250427_105208488.jpg", link: "anime/windbreakerseason1.html" }
+      
     };
 
     function loadAnimeCards() {
