--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -133,7 +133,13 @@
   </div>
   <div class="episode-display" id="episodeDisplay">Episode 1</div>  <div class="description-box">
     <h2 class="text-xl font-semibold mb-2">Description</h2>
-    <p>Wind Breaker is a high-energy anime series that follows Haruka Sakura, a strong and rebellious transfer student who joins Furin High School...</p>
+    <p>A huge thank you to Muse Asia for bringing amazing anime to Indian audiences and making it accessible for everyone! Your efforts help make anime a part of our everyday lives, and we truly appreciate everything you do<p>
+<p>If you love anime and want to keep up with all the latest episodes, updates, and more, don’t forget to subscribe to the official Muse Asia YouTube channel. By subscribing, you’re directly supporting the creators, distributors, and everyone involved in making anime possible!<p>
+<p>Thank you again for your continued support of the anime community! We’re excited to help promote and celebrate the amazing content you bring to us.
+</p>
+ <!-- Subscribe Button to Muse Asia -->
+  <button class="subscribe-btn" onclick="window.open('https://youtube.com/@museasia?si=6x9eXmTP93_PuwT-', '_blank')">Subscribe to Muse Asia</button>
+</div>
   </div>  <input type="text" id="searchBox" class="search-box" placeholder="Search episodes..." oninput="filterEpisodes()">
   <div id="episodeList"></div>  <footer class="mt-10 text-sm text-center text-gray-400">
     <p>Thank you for visiting! Please <strong>subscribe to Muse India</strong> to support anime in our region.</p>
