--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -137,7 +137,7 @@
 <p>If you love anime and want to keep up with all the latest episodes, updates, and more, don’t forget to subscribe to the official Muse Asia YouTube channel. By subscribing, you’re directly supporting the creators, distributors, and everyone involved in making anime possible!<p>
 <p>Thank you again for your continued support of the anime community! We’re excited to help promote and celebrate the amazing content you bring to us.
 </p>
- <!-- Subscribe Button to Muse Asia -->
+ <!-- 🔗Subscribe Button to Muse Asia🔗click here -->
   <button class="subscribe-btn" onclick="window.open('https://youtube.com/@museasia?si=6x9eXmTP93_PuwT-', '_blank')">Subscribe to Muse Asia</button>
 </div>
   </div>  <input type="text" id="searchBox" class="search-box" placeholder="Search episodes..." oninput="filterEpisodes()">
