--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
 
   <!-- Open Graph Meta -->
-  <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
-  <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
+  <meta property="og:title" content="DOOSH HUB - Your Anime Gateway!" />
+  <meta property="og:description" content="Explore the latest and greatest anime from Muse India with fire neon vibes on DOOSH HUB." />
   <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
   <meta property="og:url" content="https://www.dooshtoons.linkpc.net/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
-  <meta name="twitter:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
+  <meta name="twitter:title" content="DOOSH HUB - Your Anime Gateway!" />
+  <meta name="twitter:description" content="Explore the latest and greatest anime from Muse India with fire neon vibes on DOOSH HUB." />
   <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
 
   <style>
@@ -113,26 +113,6 @@
     #discordBtn:hover {
       background-color: #5e6e8e;
     }
-
-    #supportBtn {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #ff00ff;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      font-size: 1.2rem;
-      animation: neonGlow 1.5s infinite alternate;
-      z-index: 9999;
-      text-decoration: none;
-      cursor: pointer;
-    }
-
-    #supportBtn:hover {
-      background-color: #ff4500;
-    }
   </style>
 </head>
 <body>
@@ -144,33 +124,23 @@
 
   <!-- Main Content -->
   <div class="main-content">
-    <h1 class="text-4xl font-bold mb-6">About Doosh Hub</h1>
-    <p class="mb-4">Welcome to Doosh Hub — your ultimate gateway to global entertainment! Step into a world where Bollywood blockbusters, Hollywood hits, mesmerizing anime, heart-fluttering K-dramas, addictive C-dramas, and so much more come alive, all in one place.</p>
-    <p class="mb-4">At Doosh Hub, we don’t just bring you entertainment — we bring you experiences. Discover stories that thrill you, move you, and make you laugh out loud. Dive into action-packed adventures, soul-stirring dramas, and feel-good comedies, handpicked to match every mood and every moment.</p>
-    <p class="mb-4">Connect. Explore. Indulge. Join a vibrant community of fans from around the world, explore endless content, and lose yourself in the magic of your favorite movies, shows, and anime. Whatever your passion, Doosh Hub is where it all begins.</p>
-    <p class="mb-8">Your next binge-worthy obsession is just a click away. Welcome home!</p>
+    <h1 class="text-4xl font-bold mb-6">Welcome to Doosh Hub Anime</h1>
+    <p class="mb-4">Dive into the vibrant world of anime brought to you by **Muse India**. From the hottest new simulcasts to fan-favorite classics, we embed official streams so you can watch legally and support the creators.</p>
+    <p class="mb-4">Stay up-to-date with the latest episodes, trailers, and announcements—all sourced directly from Muse India’s official YouTube channel. Experience seamless embeds, original ads, and full creator attribution.</p>
+    <p class="mb-8">Make Doosh Hub your go-to destination for legally streaming anime in India. Subscribe to Muse India and join our community of fans!</p>
 
     <div class="flex justify-center gap-6">
-      <a href="support.html" class="button">Support Us</a>
       <a href="copyright.html" class="button">Copyright Info</a>
+      <a href="contact.html" class="button">Contact Us</a>
     </div>
   </div>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Doosh Hub. All rights reserved. | <a href="contact.html" class="text-purple-500">Contact Us</a></p>
+    <p>&copy; 2025 Doosh Hub Anime. All rights reserved.</p>
   </footer>
 
   <!-- Discord Button -->
   <a id="discordBtn" href="https://discord.com" target="_blank">Join Our Discord</a>
-
-  <!-- Permanent Support Button -->
-  <button id="supportBtn" onclick="navigateToSupport()">Support Us</button>
-
-  <script>
-    function navigateToSupport() {
-      window.location.href = "support.html";
-    }
-  </script>
 </body>
 </html>
