--- a/copyright.html
+++ b/copyright.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Doosh Hub – Anime Copyright Information</title>
+  <meta name="description" content="Doosh Hub Anime Section – Copyright disclaimer and responsible streaming notice for embedded Muse Asia content." />
+  <meta name="keywords" content="Doosh Hub, Muse Asia, Anime Streaming, Anime Disclaimer, Copyright Policy, Legal Streaming" />
+  <meta name="author" content="Himanshu Pandey" />
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Fire Neon Background */
     body {
       background: #0f0f0f;
       font-family: 'Roboto', sans-serif;
@@ -13,103 +17,98 @@
       color: white;
       animation: fireGlow 10s infinite alternate;
       padding: 2rem;
-    }@keyframes fireGlow {
-  0% {
-    background-color: #0f0f0f;
-    box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset;
-  }
+    }
 
-  50% {
-    background-color: #1a1a1a;
-    box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset;
-  }
+    @keyframes fireGlow {
+      0% {
+        background-color: #0f0f0f;
+        box-shadow: 0 0 40px #ff00ff, 0 0 80px #ff4500 inset;
+      }
+      50% {
+        background-color: #1a1a1a;
+        box-shadow: 0 0 60px #ff4500, 0 0 100px #ff00ff inset;
+      }
+      100% {
+        background-color: #0f0f0f;
+        box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset;
+      }
+    }
 
-  100% {
-    background-color: #0f0f0f;
-    box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset;
-  }
-}
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: left;
+    }
 
-/* Container */
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  text-align: left;
-}
+    h1 {
+      font-size: 2.5rem;
+      color: #ff00ff;
+      text-shadow: 0 0 20px #ff00ff, 0 0 30px #ff4500;
+      margin-bottom: 1rem;
+    }
 
-h1 {
-  font-size: 2.5rem;
-  color: #ff00ff;
-  text-shadow: 0 0 20px #ff00ff, 0 0 30px #ff4500;
-  margin-bottom: 1rem;
-}
+    p, h3 {
+      margin-bottom: 1rem;
+      line-height: 1.8;
+    }
 
-p,
-h3 {
-  margin-bottom: 1rem;
-  line-height: 1.8;
-}
+    h3 {
+      font-size: 1.25rem;
+      color: #ff00ff;
+    }
 
-h3 {
-  font-size: 1.25rem;
-  color: #ff00ff;
-}
+    .subscribe-btn, .nav-btn {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      border-radius: 9999px;
+      font-size: 1rem;
+      text-decoration: none;
+      margin: 1rem 0.5rem 0 0;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+      cursor: pointer;
+    }
 
-/* Buttons */
-.subscribe-btn,
-.nav-btn {
-  display: inline-block;
-  padding: 0.75rem 1.5rem;
-  border-radius: 9999px;
-  font-size: 1rem;
-  text-decoration: none;
-  margin: 1rem 0.5rem 0 0;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  cursor: pointer;
-}
+    .subscribe-btn {
+      background-color: #ff0000;
+      color: white;
+    }
 
-.subscribe-btn {
-  background-color: #ff0000;
-  color: white;
-}
+    .subscribe-btn:hover {
+      background-color: #cc0000;
+    }
 
-.subscribe-btn:hover {
-  background-color: #cc0000;
-}
+    .nav-btn {
+      background-color: #ff00ff;
+      color: white;
+    }
 
-.nav-btn {
-  background-color: #ff00ff;
-  color: white;
-}
-
-.nav-btn:hover {
-  background-color: #e600e6;
-}
-
+    .nav-btn:hover {
+      background-color: #e600e6;
+    }
   </style>
-</head><body>
+</head>
+<body>
   <div class="container">
-    <h1>Anime Copyright Information</h1><p>Welcome to Doosh Hub’s anime section! We do <strong>not</strong> host or store any anime content on our servers. All anime videos are embedded directly from official sources like Muse Asia. We do not claim any ownership over these videos.</p>
+    <h1>Anime Copyright Information</h1>
+    <p>Welcome to Doosh Hub’s anime section! We do <strong>not</strong> host or store any anime content on our servers. All anime videos are embedded directly from official sources like Muse Asia. We do not claim any ownership over these videos.</p>
 
-<h3>1. Hosting & Distribution</h3>
-<p>All embedded anime episodes come from Muse Asia’s official YouTube channel. We preserve their ads, branding, and all original attributions.</p>
+    <h3>1. Hosting & Distribution</h3>
+    <p>All embedded anime episodes come from Muse Asia’s official YouTube channel. We preserve their ads, branding, and all original attributions.</p>
 
-<h3>2. Monetization</h3>
-<p>This site is monetized with display ads, but it remains non-commercial in spirit—our goal is to support the anime industry by driving traffic back to official sources.</p>
+    <h3>2. Monetization</h3>
+    <p>This site is monetized with display ads, but it remains non-commercial in spirit—our goal is to support the anime industry by driving traffic back to official sources.</p>
 
-<h3>3. Your Responsibility</h3>
-<p>By watching anime here, you agree to view it via Muse Asia’s official embeds. Please do not download or redistribute any content.</p>
+    <h3>3. Your Responsibility</h3>
+    <p>By watching anime here, you agree to view it via Muse Asia’s official embeds. Please do not download or redistribute any content.</p>
 
-<h3>4. Inquiries & Removal Requests</h3>
-<p>If you are a rights holder and wish to request removal of any content, please contact us directly at <a href="mailto:youremail@example.com" class="text-pink-400 underline">youremail@example.com</a>.</p>
+    <h3>4. Inquiries & Removal Requests</h3>
+    <p>If you are a rights holder and wish to request removal of any content, please contact us directly at 
+      <a href="mailto:kenovogaming9@gmail.com" class="text-pink-400 underline">kenovogaming9@gmail.com</a>.
+    </p>
 
-<a href="https://youtube.com/@museasia?si=6x9eXmTP93_PuwT-" target="_blank" class="subscribe-btn">
-  Subscribe to Muse Asia
-</a>
-
-<!-- Navigation Buttons -->
-<a href="index.html" class="nav-btn">Go Back</a>
-<a href="index.2.html" class="nav-btn">Main Site</a>
-
+    <a href="https://youtube.com/@museasia?si=6x9eXmTP93_PuwT-" target="_blank" class="subscribe-btn">Subscribe to Muse Asia</a>
+    <a href="index.html" class="nav-btn">Go Back</a>
+    <a href="index.2.html" class="nav-btn">Main Site</a>
   </div>
-</body></html>
+</body>
+</html>
