--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <!-- Main Content -->
   <div class="main-content">
     <h1 class="text-4xl font-bold mb-6">Welcome to Doosh Hub Anime</h1>
-    <p class="mb-4">Dive into the vibrant world of anime brought to you by **Muse India**. From the hottest new simulcasts to fan-favorite classics, we embed official streams so you can watch legally and support the creators.</p>
+    <p class="mb-4">Dive into the vibrant world of anime brought to you by <strong>Muse India</strong>. From the hottest new simulcasts to fan-favorite classics, we embed official streams so you can watch legally and support the creators.</p>
     <p class="mb-4">Stay up-to-date with the latest episodes, trailers, and announcements—all sourced directly from Muse India’s official YouTube channel. Experience seamless embeds, original ads, and full creator attribution.</p>
     <p class="mb-8">Make Doosh Hub your go-to destination for legally streaming anime in India. Subscribe to Muse India and join our community of fans!</p>
 
@@ -135,12 +135,20 @@
     </div>
   </div>
 
+  <!-- Disclaimer Section -->
+  <div class="main-content">
+    <h2 class="text-2xl font-semibold mb-4">Disclaimer</h2>
+    <p class="mb-4">The content displayed on Doosh Hub is for entertainment purposes only. All content, including anime streams and media, is provided under fair use principles and sourced from official creators, primarily Muse India.</p>
+    <p class="mb-4">Doosh Hub does not host any copyrighted material and only embeds links to official sources like YouTube and Muse India. The site encourages users to support the creators and watch content through legal channels.</p>
+    <p class="mb-8">By accessing Doosh Hub, you agree to follow all applicable laws and respect the rights of content creators and distributors.</p>
+  </div>
+
+  <!-- Discord Button -->
+  <a id="discordBtn" href="https://discord.com" target="_blank">Join Our Discord</a>
+
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Doosh Hub Anime. All rights reserved.</p>
   </footer>
-
-  <!-- Discord Button -->
-  <a id="discordBtn" href="https://discord.com" target="_blank">Join Our Discord</a>
 </body>
 </html>
